--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wiki-countries",
   "version": "2.0.0",
+  "proxy": "http://localhost:5555",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
